--- a/DichVuBus/WebBus/WebBus.csproj
+++ b/DichVuBus/WebBus/WebBus.csproj
@@ -215,6 +215,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Models.cs" />
+    <Compile Include="Models\MongoDBContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -234,7 +236,6 @@
     <Folder Include="Areas\HocSinh\Controllers\" />
     <Folder Include="Areas\HocSinh\Views\Shared\" />
     <Folder Include="Assets\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\web.config" />
