--- a/DichVuBus/WebBus/WebBus.csproj
+++ b/DichVuBus/WebBus/WebBus.csproj
@@ -211,6 +211,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Auth\AuthAreaRegistration.cs" />
     <Compile Include="Areas\Auth\Controllers\AccountController.cs" />
     <Compile Include="Areas\HocSinh\HocSinhAreaRegistration.cs" />
@@ -222,6 +223,29 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Auth\css\style.css" />
+    <Content Include="Assets\Auth\fonts\material-icon\css\material-design-iconic-font.css" />
+    <Content Include="Assets\Auth\fonts\material-icon\css\material-design-iconic-font.min.css" />
+    <Content Include="Assets\Auth\fonts\material-icon\fonts\Material-Design-Iconic-Font.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300italic.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500italic.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-600.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700italic.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800italic.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-900.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-italic.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-regular.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700italic.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-italic.svg" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-regular.svg" />
+    <Content Include="Assets\Auth\images\Login_img.jpg" />
+    <Content Include="Assets\Auth\images\Regist_img.jpg" />
+    <Content Include="Assets\Auth\vendor\jquery\jquery.min.js" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
@@ -233,18 +257,85 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
+    <Folder Include="Areas\Admin\Views\Home\" />
     <Folder Include="Areas\Admin\Views\Shared\" />
     <Folder Include="Areas\Auth\Views\Shared\" />
     <Folder Include="Areas\HocSinh\Controllers\" />
     <Folder Include="Areas\HocSinh\Views\Shared\" />
-    <Folder Include="Assets\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\HocSinh\Views\web.config" />
     <Content Include="Areas\Auth\Views\web.config" />
     <Content Include="Areas\Auth\Views\Account\Login.cshtml" />
+    <Content Include="Assets\Auth\fonts\material-icon\fonts\Material-Design-Iconic-Font.eot" />
+    <Content Include="Assets\Auth\fonts\material-icon\fonts\Material-Design-Iconic-Font.ttf" />
+    <Content Include="Assets\Auth\fonts\material-icon\fonts\Material-Design-Iconic-Font.woff" />
+    <Content Include="Assets\Auth\fonts\material-icon\fonts\Material-Design-Iconic-Font.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300italic.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300italic.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300italic.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-300italic.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500italic.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500italic.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500italic.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-500italic.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-600.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-600.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-600.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-600.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700italic.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700italic.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700italic.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-700italic.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800italic.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800italic.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800italic.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-800italic.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-900.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-900.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-900.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-900.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-italic.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-italic.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-italic.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-italic.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-regular.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-regular.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-regular.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\poppins-v5-latin-regular.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700italic.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700italic.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700italic.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-700italic.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-italic.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-italic.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-italic.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-italic.woff2" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-regular.eot" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-regular.ttf" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-regular.woff" />
+    <Content Include="Assets\Auth\fonts\poppins\roboto-condensed-v16-latin-regular.woff2" />
     <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup>
