--- a/DichVuBus/WebBus/WebBus.csproj
+++ b/DichVuBus/WebBus/WebBus.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\LichTrinhController.cs" />
     <Compile Include="Areas\Admin\Controllers\TuyenDuongController.cs" />
+    <Compile Include="Areas\Admin\Controllers\UserController.cs" />
     <Compile Include="Areas\Admin\Controllers\XeBusController.cs" />
     <Compile Include="Areas\Auth\AuthAreaRegistration.cs" />
     <Compile Include="Areas\Auth\Controllers\AccountController.cs" />
@@ -526,6 +527,11 @@
     <Content Include="Assets\HocSinh\webfonts\fa-solid-900d41d.eot" />
     <Content Include="Areas\HocSinh\Views\Shared\_LayoutHocSinh.cshtml" />
     <Content Include="Areas\HocSinh\Views\Home\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\User\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\User\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\User\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\User\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\User\Delete.cshtml" />
     <None Include="packages.config" />
   </ItemGroup>
   <PropertyGroup>
